Fixed tests inside userRepositoryTest